--- a/index.html
+++ b/index.html
@@ -119,6 +119,16 @@
 				var parallax = new Parallax(scene);
 			</script>
 			<script src="js/clock.js"></script>
+			<script>
+				$(function(){
+					//Countdown Timer
+					$('#myCounter').mbComingsoon({
+					expiryDate: new Date('February 17, 2017'),
+					interval: 1000,       // Counter uopdate interval
+					speed: 500         
+					}); 
+				});
+			</script>
 
 		</body>
 	</html>
