fixed link on mobile devices and removed intro word

--- a/events.html
+++ b/events.html
@@ -73,7 +73,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4" >Tamaasha - Nukkad Natak	<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Stage set for <br>
+		   				     <p>Stage set for <br>
 		   				     social-activism to directly confront   <br>
 		   				     the public.</p>
 
@@ -94,7 +94,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Banjo - Clash of Bands<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> An emmence war <br/>between the best bands<br/> of our college</p>
+		   				     <p>An emmence war <br/>between the best bands<br/> of our college</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -112,7 +112,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Games<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Mind refreshing small <br/>games can be your cup<br/> of tea for the day.</p>
+		   				     <p>Mind refreshing small <br/>games can be your cup<br/> of tea for the day.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -130,7 +130,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Natraj - Solo Dance Competition<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Showcase your grooves and if you stumble make it part <br/>of the dance.</p>
+		   				     <p>Showcase your grooves and if you stumble make it part <br/>of the dance.</p>
 							 <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -152,7 +152,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Nritya - Group Dance<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Turn up the volume <br/> and dance, to see <br/> the best version of you.</p>
+		   				     <p>Turn up the volume <br/> and dance, to see <br/> the best version of you.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -170,7 +170,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Cine Quiz<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Question your knowledge <br> about the film industry. HERE!
+		   				     <p>Question your knowledge <br> about the film industry. HERE!
 		   				     </p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -189,7 +189,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Raag - Singing Competition<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Come and emancipate <br/>yourself to the world<br/> of music because story of the life is  <br>
+		   				     <p>Come and emancipate <br/>yourself to the world<br/> of music because story of the life is  <br>
 		   				     quicker than the wink of an eye</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -208,7 +208,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Sa-Re-Ga-Ma-Pa Antakshari<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Bring up the old memories<br/> in the new you.<br/> The everlasting game.</p>
+		   				     <p>Bring up the old memories<br/> in the new you.<br/> The everlasting game.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -230,7 +230,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Mirage - Fashion Show<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Everyday is a fashion show<br/> and the world is <br/>the runway.</p>
+		   				     <p>Everyday is a fashion show<br/> and the world is <br/>the runway.</p>
 
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -249,7 +249,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Drishyam - Mobile Movie making<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Life is not living it.<br/> It's making .<br/> Make something good of it.
+		   				     <p>Life is not living it.<br/> It's making .<br/> Make something good of it.
 		   				     </p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
@@ -268,7 +268,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Manch Tantra - Skit Competiton<i class="material-icons right">close</i></span>
-		   				    <p> <b>INTRO: </b> All the world is your<br/> manchhh so use your<br/> tantra to showcase what u've got.</p>
+		   				    <p>All the world is your<br/> manchhh so use your<br/> tantra to showcase what u've got.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 		   				   </div>
@@ -285,7 +285,7 @@
 		   				   </div>
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Gudgudi - The Comic Act<i class="material-icons right">close</i></span>
-		   				     <p> <b>INTRO: </b> Make the world <br/> laugh with your words.</p>
+		   				     <p>Make the world <br/> laugh with your words.</p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
@@ -306,7 +306,7 @@
 		   			   </div>
 		   			   <div class="card-reveal">
 		   			     <span class="card-title grey-text text-darken-4">Hasya Kavi<i class="material-icons right">close</i></span>
-		   			     <p> <b>INTRO: </b> Find and show us <br/> the comic in ur poetry.</p>
+		   			     <p>Find and show us <br/> the comic in ur poetry.</p>
 		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
 		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
