--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<a class="waves-effect waves-light btn-large" href="events.html">Events</a>
 					</div>
 					<div class="col s6 hide-on-med-and-up">
-						<a class="waves-effect waves-light btn-large" href="register.html">Register</a>
+						<a class="waves-effect waves-light btn-large" href="reg.html">Register</a>
 					</div>
 				</div>
 			</div>
