fixed register link

--- a/events.html
+++ b/events.html
@@ -77,7 +77,7 @@
 		   				     social-activism to directly confront   <br>
 		   				     the public.</p>
 
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -95,7 +95,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Banjo - Clash of Bands<i class="material-icons right">close</i></span>
 		   				     <p>An emmence war <br/>between the best bands<br/> of our college</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -113,7 +113,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Games<i class="material-icons right">close</i></span>
 		   				     <p>Mind refreshing small <br/>games can be your cup<br/> of tea for the day.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -131,7 +131,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Natraj - Solo Dance Competition<i class="material-icons right">close</i></span>
 		   				     <p>Showcase your grooves and if you stumble make it part <br/>of the dance.</p>
-							 <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+							 <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -153,7 +153,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Nritya - Group Dance<i class="material-icons right">close</i></span>
 		   				     <p>Turn up the volume <br/> and dance, to see <br/> the best version of you.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -172,7 +172,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Cine Quiz<i class="material-icons right">close</i></span>
 		   				     <p>Question your knowledge <br> about the film industry. HERE!
 		   				     </p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -191,7 +191,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Raag - Singing Competition<i class="material-icons right">close</i></span>
 		   				     <p>Come and emancipate <br/>yourself to the world<br/> of music because story of the life is  <br>
 		   				     quicker than the wink of an eye</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -209,7 +209,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Sa-Re-Ga-Ma-Pa Antakshari<i class="material-icons right">close</i></span>
 		   				     <p>Bring up the old memories<br/> in the new you.<br/> The everlasting game.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -232,7 +232,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Mirage - Fashion Show<i class="material-icons right">close</i></span>
 		   				     <p>Everyday is a fashion show<br/> and the world is <br/>the runway.</p>
 
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -251,7 +251,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Drishyam - Mobile Movie making<i class="material-icons right">close</i></span>
 		   				     <p>Life is not living it.<br/> It's making .<br/> Make something good of it.
 		   				     </p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -269,7 +269,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Manch Tantra - Skit Competiton<i class="material-icons right">close</i></span>
 		   				    <p>All the world is your<br/> manchhh so use your<br/> tantra to showcase what u've got.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 		   				   </div>
 		   				 </div>
@@ -286,7 +286,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Gudgudi - The Comic Act<i class="material-icons right">close</i></span>
 		   				     <p>Make the world <br/> laugh with your words.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -307,7 +307,7 @@
 		   			   <div class="card-reveal">
 		   			     <span class="card-title grey-text text-darken-4">Hasya Kavi<i class="material-icons right">close</i></span>
 		   			     <p>Find and show us <br/> the comic in ur poetry.</p>
-		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   			     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   			   </div>
@@ -334,7 +334,7 @@
 		   				     •	CIVIL <br>
 		   				     •	EEE 
 
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -352,7 +352,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Rag To Rich<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>Useful Model has to be created with the unused/ garbage components provided.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -371,7 +371,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Biding C Quiz<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>It is a 1 day programming event. <br>
 		   				     C programming quiz.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -389,7 +389,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">LAN Games<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>There will be 3 games. It is a single day event.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -413,7 +413,7 @@
 		   				     <p> <b>INTRO: </b>Will be held in computer labs. <br>
 		   				     Networking with programming.</p>
 
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -431,7 +431,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Robo Race<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>Near AB-3</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -450,7 +450,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Circuit Designing<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>1 day event. <br> In Electrical labs. <br>
 		   				     Teams from outside KEC will also be invited.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -468,7 +468,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Code Debugging<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>Debug code errors in C, Java, C#</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -491,7 +491,7 @@
 		   				     <span class="card-title grey-text text-darken-4">Web Developer<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>Will be held in computer labs.</p>
 
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -509,7 +509,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Bear Your Load<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>Participant has to balance the load of components.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -527,7 +527,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Auto CAD<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>In CAD Lab.</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -545,7 +545,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Build a bridge<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>In civil Lab</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
@@ -564,7 +564,7 @@
 		   				   <div class="card-reveal">
 		   				     <span class="card-title grey-text text-darken-4">Idea Presentation<i class="material-icons right">close</i></span>
 		   				     <p> <b>INTRO: </b>Present Your Idea</p>
-		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="register.html">Register</a></p>
+		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="reg.html">Register</a></p>
 		   				     <p class="center-align"><a class="waves-effect waves-light btn" href="rules.html">Rules</a></p>
 
 		   				   </div>
