--- a/contact.html
+++ b/contact.html
@@ -61,15 +61,15 @@
 		<div class="container">
 			
   <div class="row">
-    <form class="col s12">
+    <form >
        <div class="row">
-        <div class="input-field col s6">
+        <div class="input-field ">
           <i class="material-icons prefix">account_circle</i>
           <input id="name" type="text" class="validate" required>
           <label for="name">Enter Name:</label>
         </div>
        
-        <div class="input-field col s6">
+        <div class="input-field ">
 		  <i class="material-icons prefix">perm identity</i>
           <input id="rollno" type="text" class="validate" required>
           <label for="rollno">Enter Roll No</label>
@@ -108,10 +108,7 @@
       
    
   </div>
-			<!-- <div class="col m3 hide-on-small-only">
-				<a class="waves-effect waves-light btn-large" href="events.html">Contact Us:</a>
-			</div>
-			 -->
+			
 </div></div>
 </div>
 	
