--- a/rules.html
+++ b/rules.html
@@ -59,7 +59,7 @@
 		</div>
 
 		     
-		<div class="row"class="col s15">
+		<div class="row">
 				   <div class="col s12">
 					 <ul class="tabs">
 					   <li class="tab col s6"><a class="active" href="#cultural">Cultural Events</a></li>
